<resources>
    <item name="databaseVersion" format="integer" type="string">1</item>
    <string name="app_name">Usage Tracker</string>
    <string name="hello_world">Hello World</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="increase">% Increase</string>
    <string name="x">+X%</string>
    <string name="_00">00</string>
    <string name="time_sep">:</string>
    <string name="hours">HOURS</string>
    <string name="minutes">MINUTES</string>
    <string name="seconds">SECONDS</string>
    <string name="most_used">Most Used Apps</string>
    <string name="total_usage">Total Usage</string>
    <string name="date_placeholder">Wed, January 01 2020</string>
    <string name="date">Date</string>
    <string name="get_started">Get Started</string>
    <string name="launcher_icon">launcher icon</string>
    <string name="show_today">SHOW TODAY</string>
    <string name="byCategory">SHOW CATEGORY</string>
    <string name="byApps">SHOW APPS</string>
    <string name="listApps">Apps Used</string>
    <string name="listCategory">CATEGORIES USED</string>
    <string name="usage">Usage</string>
    <string name="notifications">Notifications</string>
    <string name="unlocks">Unlocks</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="show_all">Show All</string>
    <string name="grant">GRANT</string>
    <string name="unlock_goal">Unlock Goal</string>
    <string name="usage_goal">Usage Goal</string>
    <string name="phone_goal">Phone Goal</string>

</resources>
